New redux hooks,and private routing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -238,7 +238,7 @@ img {
   height: 100%;
 }
 
-/* Forms */
+/* 
 .form .form-group {
   margin: 1.2rem 0;
 }
@@ -290,7 +290,7 @@ button {
 }
 .form .social-input i.fa-linkedin {
   color: #0077b5;
-}
+} */
 
 .table th,
 .table td {
@@ -308,7 +308,7 @@ button {
   justify-content: space-between;
   align-items: center;
   padding: 0.7rem 2rem;
-  position: fixed;
+  /* position: fixed; */
   z-index: 1;
   width: 100%;
   top: 0;
